kubernetes/undeployed/cicd/harbor.yaml

apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: harbor-core
  namespace: harbor
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "harbor.vpn.rjst.de"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        credentialName: harbor-cert
        mode: SIMPLE
      hosts:
        - "harbor.vpn.rjst.de"

---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: harbor-core
  namespace: harbor
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
    - "harbor.vpn.rjst.de"
  gateways:
    - harbor-core
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: harbor
            port:
              number: 80
