kubernetes/undeployed/cicd/jenkins.yaml

apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "jenkins.vpn.rjst.de"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        credentialName: jenkins-cert
        mode: SIMPLE
      hosts:
        - "jenkins.vpn.rjst.de"
---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jenkins
  namespace: jenkins
spec:
  hosts:
    - "jenkins.vpn.rjst.de"
  gateways:
    - jenkins
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jenkins
            port:
              number: 8080
